Ready for beta testing!

--- a/popup.html
+++ b/popup.html
@@ -30,12 +30,13 @@
     <div class="navbar-fixed">
       <nav>
           <div class="nav-wrapper red darken-4">
-              <div class="brand-logo center"><p id="mainTitle"><img src="resources/images/icons/RB-icon-128-white.png" id="logoIcon">REDBRICK JDTI</p><p id="subTitle">(Jira Description Template Injector)</p></div>
+              <div class="brand-logo center"><p id="mainTitle"><a class="newTabLinks" href="https://rdbrck.com/"><img src="resources/images/icons/RB-icon-128-white.png" id="logoIcon"></a><a class="newTabLinks" href="https://github.com/rdbrck/jira-description-extension">REDBRICK JDTI</a></p><p id="subTitle">(Jira Description Template Injector)</p></div>
           </div>
       </nav>
     </div>
 
     <main>
+        <div id="help" class="row center-align"><a class="newTabLinks" href="https://github.com/rdbrck/jira-description-extension">Help?</a></div>
         <div class="container">
             <div class="section">
                 <div class="row">
