Big clean up of code. Used JSLint and JSHint on code base. More consistent formating and styling.

--- a/popup.html
+++ b/popup.html
@@ -95,7 +95,7 @@
                                     <input type="file" id="fileSelector">
                                 </div>
                                 <div class="file-path-wrapper">
-                                    <input class="file-path validate" type="text">
+                                    <input title="filePath" class="file-path validate" type="text">
                                 </div>
                             </div>
                         </form>
