--- a/popup.html
+++ b/popup.html
@@ -1,19 +1,24 @@
+<!--
+Copyright 2016 TBD
+https://github.com/rdbrck/jira-description-extension/blob/master/LICENSE
+-->
+
 <!doctype html>
 <html style="min-width:400px; min-height: 400px">
 <head>
 
-        <title>rdbrck Jira Description Template Injector</title>
+        <title>Jira Template Injector</title>
 
         <!--Import Google Icon Font-->
         <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
         <!-- Javascript -->
-        <script type="text/javascript" src="resources/js/jquery-2.2.2.min.js"></script>
-        <script type="text/javascript" src="resources/js/materialize.min.js"></script>
+        <script type="text/javascript" src="resources/js/jquery-2.2.3.js"></script>
+        <script type="text/javascript" src="resources/js/materialize.js"></script>
         <script type="text/javascript" src="resources/js/popup.js"></script>
 
         <!-- CSS -->
-        <link type="text/css" rel="stylesheet" href="resources/css/materialize.min.css"  media="screen,projection"/>
+        <link type="text/css" rel="stylesheet" href="resources/css/materialize.css"  media="screen,projection"/>
         <link type="text/css" rel="stylesheet" href="resources/css/popup.css">
 
         <!--Let browser know website is optimized for mobile-->
@@ -28,14 +33,11 @@
               <div class="brand-logo center">
                   <p id="mainTitle">
                       <a class="newTabLinks" href="https://rdbrck.com/">
-                          <img src="resources/images/icons/RB-icon-128-white.png" id="logoIcon">
+                          <img src="resources/images/icons/icon-white-128.png" id="logoIcon">
                       </a>
                       <a class="newTabLinks" href="https://github.com/rdbrck/jira-description-extension">
-                          REDBRICK JDTI
+                          Jira Template Injector
                       </a>
-                  </p>
-                  <p id="subTitle">
-                      (Jira Description Template Injector)
                   </p>
               </div>
           </div>
