Fixed dirty dialog box popup, added ability to export saved templates to json file

--- a/popup.html
+++ b/popup.html
@@ -144,6 +144,10 @@ https://github.com/rdbrck/jira-description-extension/blob/master/LICENSE
                 <ul class="collapsible popout" data-collapsible="accordion" id="templateEditor">
                 </ul>
             </div>
+            <div class="row">
+                <div class="col s6 offset-s3 valign-wrapper">
+                    <a id="export" class="btn waves-effect waves-light red darken-4 ">Export Templates</a>
+            </div>
         </div>
 
         <!-- Modal Structure -->
