Move images to top level folder

--- a/html/popup.html
+++ b/html/popup.html
@@ -33,7 +33,7 @@ https://github.com/rdbrck/jira-description-extension/blob/master/LICENSE
               <div class="brand-logo center">
                   <p id="mainTitle">
                       <a class="newTabLinks" href="https://rdbrck.com/">
-                          <img src="../resources/images/icons/icon-white-128.png" id="logoIcon">
+                          <img src="../images/icon-white-128.png" id="logoIcon">
                       </a>
                       <a class="newTabLinks" href="https://github.com/rdbrck/jira-description-extension">
                           Jira Template Injector
