Initial Firefox support. Removed DM for the moment as it's not working in FF. only other outstanding issue is file uploads don't work due to bug with FF webExtension. Bug has been submitted: https://bugzilla.mozilla.org/show_bug.cgi?id=1292701

--- a/src/html/popup.html
+++ b/src/html/popup.html
@@ -4,7 +4,7 @@ https://github.com/rdbrck/jira-description-extension/blob/master/LICENSE
 -->
 
 <!doctype html>
-<html style="min-width:400px; min-height: 400px">
+<html>
 <head>
 
         <title>Jira Template Injector</title>
